--- a/husky_commander/setup.cfg
+++ b/husky_commander/setup.cfg
@@ -1,3 +1,13 @@
+[options]
+packages = find:
+install_requires = 
+    rclpy
+    launch
+    launch_ros
+
+[options.data_files]
+share/husky_commander/launch = launch/*.launch.py
+
 [develop]
 script_dir=$base/lib/husky_commander
 [install]
